[package]
name = "force"
version = "0.1.0"
edition = "2024"
description = "A force multiplier for parallel AI development"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.9.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"
